rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__idle_v2.snap
---
source: src/tui/app.rs
expression: render_state(&state)
---
┌Transcript────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input · Enter submit · Ctrl+J newline─────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
mock/mock | Ready | Input · Tab transcript · PageUp/Down scroll · Ctrl+C cancel
