rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__snapshot_narrow_terminal.snap
---
source: src/tui/app.rs
expression: output
---
┌Transcript────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
┌Input─────────────────────────────────┐
│                                      │
└──────────────────────────────────────┘
Ready
