rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__snapshot_provider_error.snap
---
source: src/tui/app.rs
expression: output
---
┌Transcript────────────────────────────────────────────────────────────────────┐
│❌  Error: Rate limit exceeded                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Ready
