rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__snapshot_streaming.snap
---
source: src/tui/app.rs
expression: output
---
┌Transcript────────────────────────────────────────────────────────────────────┐
│You: hi                                                                       │
│                                                                              │
│Hello! I can help you with coding tasks.                                      │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│ ⏳                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
Ready
