rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__snapshot_tool_running.snap
---
source: src/tui/app.rs
expression: output
---
┌Transcript────────────────────────────────────────────────────────────────────┐
│⚙ bash running...                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│ ⏳                                                                            │
└──────────────────────────────────────────────────────────────────────────────┘
Ready
