rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__snapshot_unicode.snap
---
source: src/tui/app.rs
expression: output
---
┌Transcript────────────────────────────────────────────────────────────────────┐
│你 好 世 界  🌍  café résumé                                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Ready
