rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__tool_collapsed_v2.snap
---
source: src/tui/app.rs
assertion_line: 2218
expression: render_state(&tool)
---
┌Transcript────────────────────────────────────────────────────────────────────┐
│▶ bash  running                                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input · draft (Enter unavailable)─────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
mock/mock | Agent running | tool: bash | Input · Tab transcript · PageUp/Down sc
