rusty-pi/src/tui/snapshots/rusty_pi__tui__app__tests__tool_expanded_v2.snap
---
source: src/tui/app.rs
assertion_line: 2243
expression: render_state(&tool)
---
┌Transcript────────────────────────────────────────────────────────────────────┐
│▼ bash  success · exit 0                                                      │
│Arguments:                                                                    │
│  {                                                                           │
│    "command": "ls"                                                           │
│  }                                                                           │
│stdout:                                                                       │
│  listed file                                                                 │
│stderr:                                                                       │
│  warning                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input · draft (Enter unavailable)─────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
mock/mock | Agent running | Transcript · Space expand · i input · End latest | b
